--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burger/burger-block devoured=false}}
+      {{> burger/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -13,9 +13,9 @@
 <h2>Burgers that are devoured!</h2>
 
 <ul>
-  {{#each burger}}
+  {{#each burgers}}
     {{#if devoured}}
-      {{> burger/burger-block devoured=true}}
+      <li>{{burger_name}}</li>
     {{/if}}
   {{/each}}
 </ul>
@@ -27,12 +27,5 @@
     <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
   </div>
-
-  <div class="form-group">
-    <label for="devoured">Eat?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Not Devoured.
-  </div>
-
   <button class="button" type="submit">Create</button>
 </form>
