--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newsleep="{{devoured}}">devoured</button>
+	<button class="change-devoured" data-id="{{id}}" data-eat="{{devoured}}">devoured</button>
 
 	
 </li>
